# TOUCHSTONE-LA-8

./: .gitignore  CMakeLists.txt  README.md
.claude/skills/build-and-validate/: SKILL.md
.claude/skills/tune-and-measure/: SKILL.md
auditions/: README.md
docs/: CNAME  SPECS.md  index.html  measurements-2026-06-11.json  measurements-2026-06-12.json  measurements-2026-06-18.json
docs/site/: index.html
dsp/include/refcomp/: ADAA.h  AnalogFlaws.h  Ballistics.h  Common.h  DetectorChain.h  Engine.h  GainSolverQP.h  Halfband.h  MathOps.h  Saturators.h  StaticCurve.h  TopologyClean.h  TopologyFET.h  TopologyOptimal.h  TopologyOpto.h  TopologyVCA.h  TopologyVariMu.h  TopologyVoice.h
plugin/: CMakeLists.txt  Params.cpp  Params.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: brand_assets.py  build.sh  get_pluginval.sh  install.sh  package.sh  render_auditions.sh  run_measurements.sh  sign_notarize.sh  validate.sh
site/: index.html
tests/: CMakeLists.txt  main.cpp
tests/cases/: test_adaa.cpp  test_aliasing.cpp  test_cpu_bench.cpp  test_flaws.cpp  test_freq_response.cpp  test_latency.cpp  test_null_modes.cpp  test_opt_vs_scalar.cpp  test_optimal.cpp  test_step_response.cpp  test_voice.cpp
tests/harness/: Corpus.h  Json.h  Measure.h  Signals.h  Spectrum.h
tools/audio_analysis/: measure.py  normalize.py
tools/hardware_ab/: README.md  compare.py
tools/render/: CMakeLists.txt  WavIO.h  make_synth_vocal.py  render.cpp
